DejaVu Sans were took under double quotes to avoid potential browser errors due to white spaces

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,7 +1,7 @@
 /* Add CSS Styling */
 .odd-numbered {
     background-color: #ffc0cb;
-    font-family: DejaVu Sans, Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "DejaVu Sans", Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .text24 {
